--- a/product-data-service/src/main/resources/application.properties
+++ b/product-data-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#server.port 不在此处设置，由程序输入，注意    @Value("${server.port}")注解
 spring.application.name=product-data-service
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
