--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=eureka-server
+#hostname: localhost 表示主机名称。
 eureka.instance.hostname=localhost
+
+#表示是否注册到服务器。 因为它本身就是服务器，所以就无需把自己注册到服务器了。
 eureka.client.register-with-eureka=false 
+
+#表示是否获取服务器的注册信息，和上面同理，这里也设置为 false。
 eureka.client.fetch-registry=false
+
+#作为服务器，公布出来的地址。 比如后续某个微服务要把自己注册到 eureka server, 那么就要使用这个地址： http://localhost:8761/eureka/
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
