--- a/product-data-service/src/main/resources/application.properties
+++ b/product-data-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 spring.application.name=product-data-service
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+spring.zipkin.base-url=http://localhost:9411
