add feign and config-service-git-way...

--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,6 @@
     	<module>eureka-server1</module>
     	<module>product-ribbon-service</module>
     	<module>product-feign-service</module>
+    	<module>product-config-service</module>
     </modules>
 </project>
