--- a/product-config-service/pom.xml
+++ b/product-config-service/pom.xml
@@ -5,39 +5,20 @@
     <artifactId>spring-cloud-try</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <artifactId>product-feign-service</artifactId>
-  
+  <artifactId>product-config-service</artifactId>
       <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-	     <!-- 添加feign服务 --> 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-	     <!-- 添加zipkin链路追踪服务 --> 
-	  	<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zipkin</artifactId>
-		</dependency>     
-                 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
  
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>  
-   
     </dependencies>  
-  
-  
 </project>
