--- a/product-feign-service/src/main/resources/application.properties
+++ b/product-feign-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.port 不在此处设置，由程序输入，注意    @Value("${server.port}")注解
 spring.application.name=product-feign-service
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/
+#eureka.instance.hostname=localhost
+#eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/ #迁移至bootstrap.yml
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
