add hystrix hystrix-monitor hystrix-turbine zuul...

--- a/product-feign-service/src/main/resources/application.properties
+++ b/product-feign-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=product-feign-service
 #eureka.instance.hostname=localhost
 #eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:8761/eureka/ #迁移至bootstrap.yml
+feign.hystrix.enabled=true   
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
