--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
       <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>2.0.1.RELEASE</version>
         <relativePath/>
     </parent>
     <properties>
@@ -51,5 +51,8 @@
     	<module>product-ribbon-service</module>
     	<module>product-feign-service</module>
     	<module>product-config-service</module>
+    	<module>product-hystrix-dashboard-service</module>
+    	<module>product-turbine-service</module>
+    	<module>product-zuul-service</module>
     </modules>
 </project>
